bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: 'case' expected but string literal found.
  "R" => droite();avance();
  ^BDR2:2: error: '}' expected but ';' found.
  "R" => droite();avance();
                 ^BDR2:6: error: ')' expected but '}' found.
while (estSurMessage()) {if (litMessage()==}
                                           ^BDR2:16: error: Unmatched closing brace '}' ignored here
	}
        ^BDR2:17: error: eof expected but '}' found.
}
^